Chapter 11 is finished. Added View pager to the Crime Fragment.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".controller.crime.CrimeActivity"
+                android:name=".controller.crimePager.CrimePagerActivity"
                 android:label="@string/app_name">
         </activity>
     </application>
