--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         </activity>
         <activity
                 android:name=".controller.crimePager.CrimePagerActivity"
-                android:label="@string/app_name">
+                android:label="@string/app_name"
+                android:parentActivityName=".controller.crimeList.CrimeListActivity">
         </activity>
     </application>
 
