--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.wrightcontrol.criminalintent.app">
 
+    <uses-permission
+            android:name="ANDROID.PERMISSION.READ_EXTERNAL_STORAGE"
+            android:maxSdkVersion="18"/>
+    <uses-feature
+            android:name="android.hardware.Camera"
+            android:required="false"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -9,8 +16,8 @@
             android:theme="@style/Theme.AppCompat">
         <activity android:name=".controller.crimeList.CrimeListActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
